@@ -6,6 +6,7 @@ pts-core: Add option in the result viewer to allow compacting multi-option test 
 pts-core: Add Parent tag to result file schema for specifying relation to other result objects
 pts-core: Report test profile support errors when intended
 pts-core: Fix showing NVIDIA test options on non-Linux NVIDIA platforms
+pts-core: Don't show delete/annotation options for dynamically generated result objects where those options are not relevant
 pts_Graph: Restore support for error bars on vertical bar graph rendering
 pts_Graph: Support for simpler view / rendering without header/footer
 
